--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -1,53 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary"
     tools:context=".Fragments.GuideFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <ImageView
-        android:id="@+id/nav_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="10dp"
-        android:src="@drawable/ic_menu_black_24dp" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/guide_searchCV"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:backgroundTint="@android:color/white"
+        app:cardCornerRadius="5dp">
+
+        <RelativeLayout
+            android:id="@+id/rl1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/guide_nav_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="10dp"
+                android:src="@drawable/ic_menu_black_24dp" />
+
+            <EditText
+                android:id="@+id/guide_searchET"
+                android:layout_width="275dp"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:background="@null"
+                android:cursorVisible="false"
+                android:gravity="center_vertical"
+                android:hint="Search Guide"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:textColor="@android:color/black"
+                android:textColorHint="@android:color/darker_gray"
+                android:textSize="21sp" />
+
+            <ImageView
+                android:id="@+id/searchIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerInParent="true"
+                android:layout_marginEnd="5dp"
+                android:background="@drawable/custom_round"
+                android:padding="8dp"
+                android:src="@drawable/ic_search" />
+
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
+
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie1"
         android:layout_width="350dp"
         android:layout_height="190dp"
+        android:layout_below="@+id/guide_searchCV"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        app:lottie_loop="true"
+        android:layout_marginTop="20dp"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="loading_anim.json"/>
+        app:lottie_fileName="loading_anim.json"
+        app:lottie_loop="true" />
 
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie3"
         android:layout_width="350dp"
         android:layout_height="150dp"
+        android:layout_below="@+id/lottie1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        app:lottie_loop="true"
-        android:layout_below="@+id/lottie1"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="material-wave-loading.json"/>
+        app:lottie_fileName="material-wave-loading.json"
+        app:lottie_loop="true" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie4"
         android:layout_width="350dp"
-        android:layout_height="200dp"
+        android:layout_height="150dp"
+        android:layout_below="@+id/lottie3"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        app:lottie_loop="true"
-        android:layout_below="@+id/lottie3"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="continuous-wave-loader.json"/>
+        app:lottie_fileName="continuous-wave-loader.json"
+        app:lottie_loop="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -55,18 +101,19 @@
         android:layout_below="@id/lottie4"
         android:layout_centerInParent="true"
         android:layout_marginTop="10dp"
-        android:textSize="21sp"
         android:text="loading animation test"
-        android:textColor="@android:color/black"/>
+        android:textColor="@android:color/black"
+        android:textSize="21sp" />
 
     <Button
         android:id="@+id/internet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:text="No Internet Connection"
         android:textAllCaps="false"
-        android:textSize="21sp"/>
+        android:textColor="@android:color/black"
+        android:textSize="21sp" />
 </RelativeLayout>
