--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,16 +20,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
+            android:padding="10dp"
             android:src="@drawable/ic_menu_black_24dp" />
-        
-            <FrameLayout
-                android:id="@+id/fragment_container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
     </RelativeLayout>
 
@@ -40,9 +40,9 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/navigation_drawer_header"
+        app:itemBackground="@drawable/nav_item_drawable"
         app:itemIconTint="@drawable/drawer_item_color"
         app:itemTextColor="@android:color/black"
-        app:itemBackground="@drawable/nav_item_drawable"
         app:menu="@menu/nav_options" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
