--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -10,9 +10,10 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.cardview.widget.CardView
         android:id="@+id/event_searchCV"
-        android:layout_width="370dp"
+        android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
         android:backgroundTint="@android:color/white"
         app:cardCornerRadius="5dp">
@@ -32,11 +33,12 @@
 
             <EditText
                 android:id="@+id/location_searchET"
-                android:layout_width="280dp"
+                android:layout_width="275dp"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:layout_toEndOf="@+id/nav_icon"
                 android:background="@null"
+                android:gravity="center_vertical"
                 android:cursorVisible="false"
                 android:hint="Search Location"
                 android:paddingStart="15dp"
@@ -51,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:layout_centerInParent="true"
-                android:layout_marginEnd="10dp"
+                android:layout_marginEnd="5dp"
                 android:background="@drawable/custom_round"
                 android:padding="8dp"
                 android:src="@drawable/ic_search" />
