--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,17 +14,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/nav_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
+        <RelativeLayout
+            android:id="@id/rl1"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="10dp"
-            android:padding="10dp"
-            android:src="@drawable/ic_menu_black_24dp" />
+            android:layout_marginEnd="20dp">
+
+            <ImageView
+                android:id="@+id/nav_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:padding="10dp"
+                android:src="@drawable/ic_menu_black_24dp" />
+        </RelativeLayout>
+
 
         <FrameLayout
             android:id="@+id/fragment_container"
