--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
         android:backgroundTint="@android:color/white"
         app:cardCornerRadius="5dp">
 
@@ -31,20 +30,15 @@
                 android:padding="10dp"
                 android:src="@drawable/ic_menu_black_24dp" />
 
-            <EditText
+            <TextView
                 android:id="@+id/location_searchET"
-                android:layout_width="match_parent"
+                android:layout_width="250dp"
                 android:layout_height="match_parent"
                 android:layout_centerInParent="true"
-                android:layout_toEndOf="@+id/nav_icon"
                 android:background="@null"
-                android:cursorVisible="false"
                 android:fontFamily="@font/amarante"
-                android:gravity="center_vertical"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp"
+                android:gravity="center"
                 android:text="Tour"
-                android:textAlignment="center"
                 android:textColor="@android:color/darker_gray"
                 android:textSize="21sp"
                 android:textStyle="bold" />
@@ -58,8 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/tour_searchCV"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp">
 
         <ImageView
