--- a/app/src/main/res/layout/items_for_cardview.xml
+++ b/app/src/main/res/layout/items_for_cardview.xml
@@ -8,8 +8,11 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="550dp"
-        android:layout_margin="8dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="20dp">
 
@@ -29,9 +32,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:layout_below="@id/image"
-                android:layout_marginLeft="16dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginRight="16dp"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
                 android:fontFamily="@font/amarante"
                 android:text="Brochure"
                 android:textAlignment="center"
@@ -44,10 +47,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/title"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"
+                android:padding="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:drawablePadding="10dp"
                 android:ellipsize="end"
                 android:fontFamily="@font/amarante"
