optimize tour fragment and fixes some bugs

--- a/app/src/main/res/layout/fragment_tour.xml
+++ b/app/src/main/res/layout/fragment_tour.xml
@@ -52,8 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/tour_searchCV"
-        android:layout_marginTop="5dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp">
 
         <ImageView
@@ -75,20 +75,22 @@
             android:id="@+id/slider"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
     </RelativeLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/location_TIL"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="match_parent"
-        android:layout_height="61dp"
+        android:layout_height="52dp"
         android:layout_below="@+id/sliderLayout"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
+        android:focusableInTouchMode="true"
         android:fontFamily="@font/amarante"
-        android:hint="Your location"
+        android:hint="Location"
         android:textColorHint="@color/colorYellow">
 
         <AutoCompleteTextView
