--- a/app/src/main/res/layout/items_for_cardview.xml
+++ b/app/src/main/res/layout/items_for_cardview.xml
@@ -9,10 +9,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="25dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="25dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         app:cardBackgroundColor="#FFFFFF"
         app:cardCornerRadius="20dp">
 
