--- a/app/src/main/res/layout/items_for_cardview.xml
+++ b/app/src/main/res/layout/items_for_cardview.xml
@@ -20,18 +20,34 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/image"
+            <RelativeLayout
+                android:id="@+id/imageLayout"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/logo" />
+                android:layout_height="200dp">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/loading"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    app:lottie_autoPlay="true"
+                    app:lottie_fileName="continuous-wave-loader.json"
+                    app:lottie_loop="true" />
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/logo" />
+
+            </RelativeLayout>
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
-                android:layout_below="@id/image"
+                android:layout_below="@id/imageLayout"
                 android:layout_marginTop="10dp"
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
