--- a/app/src/main/res/layout/location_autocomplete_row.xml
+++ b/app/src/main/res/layout/location_autocomplete_row.xml
@@ -20,11 +20,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
+        android:fontFamily="@font/amarante"
         android:paddingStart="8dp"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textColor="#000000"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        tools:text="Afghanistan" />
+        android:textSize="25sp" />
 
 </LinearLayout>
